# ultimate-guide-to-fastapi-and-backend-development

./: .gitignore  10-decorator_function copy.py  10.5-decorator_class.py  11-path-param.py  17-req-body.py  19-put-method.py  20-patch.py  47-async.py  49-task.py  50-async.py  di_test.py  main.py  pyproject.toml  sqlite.db  start.bat
app/: 09-type-hinting.py  12_route_order.py  13-simple-database.py  18_path_query.py  21-delete.py  22_why_use_pydantic.py  24-use-enum.py  24_use_enum.py  25_response_model.py  schemas.py
app_26/: main.py  schemas.py
app_28/: database.py  main.py  shipments.json  sqlite.db
app_30/: database.py
app_36/: database.py  schemas.py  sqlite.db
app_39/: database.py  main.py
app_40/: main.py  test.py
app_40/database/: database.py  models.py  schemas.py  session.py
app_45/: sqlite.db
app_45/database/: schemas.py
app_46_통합모델/: main.py  sqlite.db
app_46_통합모델/database/: schemas.py  session.py
app_53/: config.py  main.py
app_53/api/: router.py
app_53/database/: session.py
app_53/services/: shipment.py
app_57/app/database/: models.py
app_59/app/: main.py  utils.py
app_59/app/api/: dependencies.py  router.py
app_59/app/api/core/: security.py
app_59/app/database/: session.py
app_59/app/services/: seller.py  shipment.py
app_71/app/: config.py  main.py  utils.py
app_71/app/api/: dependencies.py  router.py
app_71/app/database/: models.py  session.py
app_71/app/services/: seller.py  shipment.py
understanding_DI/: main.py  main_Class_AuthService.py  main_Class_Email_Service.py  main_DI.py  main_DI_Annotated.py
(+7 files in other folders)
