[project]
name = "env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]",
    "passlib[bcrypt]>=1.7.4",
    "pip",
    "pydantic-settings>=2.9.1",
    "scalar-fastapi",
    "sqlmodel>=0.0.24",
]
